# DailyScry

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  renovate.json5  rustfmt.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: build.yml  daily_scry.yml  lint.yml  release.yml  reuse.yml  test.yml
.reuse/: dep5
LICENSES/: MIT.txt
src/: card.rs  error.rs  format.rs  image.rs  main.rs  util.rs
src/card/: mod.rs  random.rs
src/card/filter/: content_warning.rs  ignored_oracle_id.rs  interface.rs  mod.rs
src/config/: cli_config.rs  mod.rs
src/mastodon/: mod.rs
src/telegram/: mod.rs
