[package]
name = "daily_scry"
authors = ["Philip Molares <philip.molares@udo.edu>"]
description = "Post random scryfall image to mastodon, telegram or stdout"
license = "MIT"
readme = "README.md"
repository = "https://github.com/DerMolly/DailyScry"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
megalodon = "0.13.2"
scryfall = "0.16.1"
string-builder = "0.2.0"
url = "2.5.0"
snafu = "0.8.2"
futures = "0.3.30"
clap-verbosity-flag = "2.2.0"
pretty_env_logger = "0.5.0"
log = "0.4.21"
dotenv = "0.15.0"
image = "0.25.0"
uuid = "1.8.0"

[dependencies.clap]
version = "4.5.3"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.teloxide-core]
version = "0.9.1"
default-features = false

[dependencies.tokio]
version = "1.36.0"
features = ["full"]
